hw06/k8s/03-manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw06-service
  labels:
    app: hw06-app
spec:
  selector:
    app: hw06-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
