hw06/k8s/03-manifests/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw06-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Мониторинг и логирование
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-ID: $request_id";
    # Безопасность
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
    # Для Prometheus метрик
    nginx.ingress.kubernetes.io/server-snippet: |
      location /metrics {
        stub_status on;
        access_log off;
        allow 127.0.0.1;
        deny all;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw05-service
                port:
                  number: 80
